# esp32_clock

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  PCF2129_rtc_driver.c  PCF2129_rtc_driver.h  clock_config.h  clock_display.c  clock_display.h  co2_sensor.c  co2_sensor.h  display_drawing.c  display_drawing.h  display_functions.c  display_functions.h  fonts.h  i2c_driver.c  i2c_driver.h  images.h  keys_controlling.c  keys_controlling.h  light_sensor.c  light_sensor.h  main.c  mavlink_handling.c  mavlink_handling.h  max7219.c  max7219.h  menu_selector.c  menu_selector.h  mode_controlling.c  mode_controlling.h  nvs_functions.c  nvs_functions.h  oled_display.c  oled_display.h  time_update.c  time_update.h  weather_json_parse.c  weather_json_parse.h  weather_update.c  weather_update.h
main/protocol_common/: CMakeLists.txt  connect.c  wifi_connect.c
main/protocol_common/include/: protocol_examples_common.h
